# funder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CONTRACTS.md  DECISIONS.md  GATES.md  GOALS.md  README.md  RISKS.md  compose.prod.example.yaml  compose.yaml  pyproject.toml
.github/workflows/: auto-merge.yml  main-quality.yml  merge-gate.yml  pr-quality.yml  quality.yml
apps/api/: Dockerfile
apps/web/: Dockerfile  package.json  server.js
docs/: docs_refresh_report.json  eodhd_ucits_etf_canonical_isins.csv  hosted_security_architecture.md  lake_contracts.md  search_bronze_workflow.md  search_fetch_workflow.md
docs/backlog/: 00-critical-correctness-priority-queue.md  eu-tax-cost-architecture.md  production-portfolio-implementation-map.md  ui-local-docker-execution-contract.md
docs/goals/: guided-free-key-first-run.md  visual-research-funnel.md
docs/security/: hosted_readiness.md  hosted_security_policy.json
scripts/: pytest_shard.py  refresh_docs.py
src/camovar/: __init__.py  architecture_checks.py  artifact_cache.py  bivariate_statistics.py  bronze.py  cli.py  compose_web_watch.py  config.py  contracts.py  docs_refresh.py  evaluation.py  fetch_all_isins.py  fetch_all_quotes.py  gold.py  gold_pair_stats.py  hosted_api.py  hosted_auth.py  hosted_catalog.py  hosted_credentials.py  hosted_cutover.py  hosted_readiness.py  hosted_runtime.py  http.py  logging.py  metadata_filter.py  multivariate_statistics.py  paths.py  pipeline.py  portfolio.py  profiles.py  quality.py  recommendation.py  return_quality.py  risk_model.py  run_locks.py  run_state.py  schema_validation.py  schemas.py  scoped_inputs.py  scorecard.py  (+14 more)
src/camovar/cashflow/: __init__.py  contracts.py
src/camovar/costs/: contracts.py  registry.py
src/camovar/evaluation_parts/: __init__.py  backtest.py  frontier.py  matrix.py  metrics.py  portfolio_returns.py  rebalance.py  tail_risk.py
src/camovar/portfolio_parts/: __init__.py  clustering.py  constraints.py  cvar.py  diversification.py  hrp.py  objectives.py  risk_parity.py  solvers.py
src/camovar/tax/: __init__.py  contracts.py  cost_basis.py  registry.py
src/founder/: __init__.py  architecture_checks.py  artifact_cache.py  bivariate_statistics.py  bronze.py  calculation_status.py  cli.py  config.py  contract_versioning.py  contracts.py  docs_refresh.py  entitlements.py  evaluation.py  fetch.py  fetch_all_isins.py  fetch_all_quotes.py  gold.py  gold_pair_stats.py  hosted_api.py  hosted_auth.py  hosted_catalog.py  hosted_cutover.py  hosted_runtime.py  http.py  logging.py  metadata_filter.py  multivariate_statistics.py  paths.py  pipeline.py  portfolio.py  quality.py  recommendation.py  risk_model.py  run_locks.py  run_state.py  schema_validation.py  schemas.py  scoped_inputs.py  scorecard.py  search.py  (+12 more)
src/funder/: config.py  http.py  paths.py  quality.py
tests/: test_architecture_refactor_stack.py  test_artifact_cache.py  test_backlog_stack.py  test_bivariate_artifact_cache.py  test_bivariate_statistics.py  test_cashflow_contracts.py  test_cli.py  test_config.py  test_contracts.py  test_costs_contracts.py  test_costs_registry.py  test_entitlements.py  test_entrypoints.py  test_evaluation.py  test_fetch_all_isins.py  test_future_work.py  test_hosted_api.py  test_hosted_auth.py  test_hosted_catalog.py  test_hosted_credentials.py  test_hosted_cutover.py  test_hosted_readiness.py  test_hosted_runtime_compose.py  test_hosted_web_ui.py  test_hrp_clustering.py  test_http.py  test_import.py  test_logging.py  test_minimum_cvar.py  test_minimum_cvar_portfolio.py  test_missing_covariance_fails_closed.py  test_multivariate_production_adapter.py  test_multivariate_recommendation.py  test_multivariate_selection_cache.py  test_multivariate_trading_handoff.py  test_open_backlog_stack.py  test_pairwise_scale_guard.py  test_paths.py  test_portfolio_artifacts.py  test_portfolio_solvers.py  (+35 more)
(+39 files in other folders)
