[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "founder"
version = "0.1.0"
description = "Minimum-risk ETF portfolio tooling using EODHD EOD data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
founder = "founder.cli:main"
founder-quality = "founder.quality:main"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/founder"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
files = ["src", "tests"]