[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camovar"
version = "0.1.0"
description = "Minimum-risk ETF portfolio tooling using EODHD EOD data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi>=0.116.0",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=25.0.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
camovar = "camovar.cli:main"
camovar-docs-refresh = "camovar.docs_refresh:main"
camovar-fetch-all-quotes = "camovar.fetch_all_quotes:main"
camovar-quality = "camovar.quality:main"
camovar-compose-web-watch = "camovar.compose_web_watch:main"

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "import-linter>=2.13",
    "pre-commit>=4.2.0",
    "pyright>=1.1.411",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/camovar"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.importlinter]
root_package = "camovar"

[[tool.importlinter.contracts]]
name = "Evaluation does not depend on ingestion"
type = "forbidden"
source_modules = ["camovar.evaluation", "camovar.evaluation_parts"]
forbidden_modules = [
    "camovar.bronze",
    "camovar.cli",
    "camovar.config",
    "camovar.http",
    "camovar.search",
    "camovar.silver",
]

[[tool.importlinter.contracts]]
name = "Shared infrastructure does not depend on workflow modules"
type = "forbidden"
source_modules = [
    "camovar.logging",
    "camovar.paths",
    "camovar.run_locks",
    "camovar.run_state",
    "camovar.schemas",
    "camovar.table_io",
]
forbidden_modules = [
    "camovar.bronze",
    "camovar.cli",
    "camovar.evaluation",
    "camovar.gold",
    "camovar.portfolio",
    "camovar.search",
    "camovar.silver",
]
